03 Mar 2008 Fix BSM/BASSM mode switch trace - Paul Leisy
02 Mar 2008 re-disable SenseID on 8809,3410,3420 (breaks MTS) - Ivan Warren 
29 Feb 2008 Fix TRAP in z/arch mode - Paul Leisy
29 Feb 2008 Added feature parsing_enhancement_facility - Bernard
28 Feb 2008 Fix RP in z/arch mode and mode switch trace - Paul Leisy
27 Feb 2008 Added feature message_security_assist_extension_2 - Bernard
22 Feb 2008 Fix BSA pic06 in z/arch mode - Paul Leisy
20 Feb 2008 Fix BSA pic06/05 and branch to odd addrs pic06 - Paul Leisy
17 Feb 2008 Enable Posix 1003.1e capabilities to restrict setuid-0
            programs to just the necessary privileges - Ivan Warren
15 Feb 2008 Fix PC, RP pic13, STCKE byte 0 and two PER bugs - Paul Leisy
12 Feb 2008 Fix 3880 SNSID length (thanks De!) - Greg
12 Feb 2008 Fixes for SPKA, BASR, TBEDR, PR - Paul Leisy
12 Feb 2008 dyngui tweaks: new def devlist fmt, new debug_cd_cmd hook - Fish
11 Feb 2008 Fixed intermediate errors cmpsc - Bernard
07 Feb 2008 Solaris build support by Jeff Savit - Roger Bowler
24 Jan 2008 Fix invalidate_tlbe processing - Paul Leisy by Greg
23 Jan 2008 Fix and optimize TR instruction - Greg
23 Jan 2008 Modifications for VS9 C++ 2008 Express by Charlie Brint - Roger Bowler
21 Jan 2008 Activate ETF3 and ETF2/ETF3-Enhancements in ESA/390 mode - Roger Bowler
21 Jan 2008 Permit Extended-Translation-Facility-3 to be activated in S/370 and ESA/390 modes - Roger Bowler
16 Jan 2008 Data exception for only UNPRECEDED nonzero bit34 ece entries - Fish
14 Jan 2008 Additional ISO-8859-1 to European EBCDIC codepages - Roger Bowler
11 Jan 2008 new 'ctc' command to enable/disable debug option on demand - Fish
03 Jan 2008 sf commands update - Greg Smith
01 Jan 2008 Data exception on nonzero bit34 in ece entry - Bernard van der Helm
31 Dec 2007 Data exceptions on fetching ece, cce and sd1 - Bernard van der Helm
31 Dec 2007 Data excep in CMPSC expansion psl and cls = 0 - Bernard van der Helm